# CloudRendering

./: .build-module.sh  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-linux-vcpkg.sh  build-linux.sh  build-macos-brew.sh  build-macos-vcpkg.sh  build-msvc.bat  build-windows-msys2.sh  build-windows.bat  build.bat  build.sh  setup.py  shell.nix  vcpkg.json
.github/workflows/: build-brew.yml  build-linux.yml  build-msys2.yml  build-ubuntu.yml  build-vcpkg.yml  test-volumetric-path-tracing.yml
CMake/: MacOSXBundleInfo.plist.in
Data/CloudDataSets/: datasets.json
Data/Shaders/: Blit.glsl  BlitMomentTexture.glsl  CameraPoseLine.glsl  Clouds.glsl  EAWDenoise.glsl  GammaCorrection.glsl  GlobalDefines.glsl  Lighting.glsl  TestRayTracing.glsl  TestShader.glsl
Data/Shaders/BRDF/: Blinn-Phong.glsl  BlinnPhong.glsl  ConstantLighting.glsl  Cook-Torrance.glsl  CookTorrance.glsl  Disney2012.glsl  Lambertian.glsl
Data/Shaders/Denoiser/: BackgroundPass.glsl  EAWDenoise.glsl  FeatureMapMerge.glsl  NormalizeNormals.glsl  VectorBlit.glsl
Data/Shaders/VPT/: CheckIsosurfaceHit.glsl  Clouds.glsl  ComputeOccupancyGrid.glsl  DecompositionTracking.glsl  DeltaTracking.glsl  DepthBlended.glsl  DepthNearestOpaque.glsl  FloatPack.glsl  IsosurfaceRendering.glsl  NeeTransmittance.glsl  NextEventTracking.glsl  OctahedralMapper.glsl  OctohedralMapper.glsl  PNanoVDB.glsl  RatioTracking.glsl  RayMarchingEmissionAbsorption.glsl  RayTracingUtilities.glsl  ResidualRatioTracking.glsl  TransmittanceVolume.glsl  VptHeader.glsl  VptUtils.glsl
Data/Shaders/ViewSelection/: ComputeEnergyTerm.glsl  ConvertTransmittanceVolume.glsl  OccupationVolume.glsl  TransmittanceVolume.glsl  UpdateObervationVolumes.glsl
docs/compilation/: compilation_linux.md  compilation_msys.md  compilation_vcpkg.md  pytorch.md
docs/license-libraries/: README.txt
docs/license-libraries/compression/: LICENSE-jbig-README.txt
modules/kpn_module/: CMakeLists.txt
modules/kpn_module/src/: Kernel.cu  perPixelKernel.cpp  perPixelKernel.hpp
scripts/: similarity.py
src/: CloudData.cpp  CloudData.hpp  CloudDataIsosurface.cpp  CloudDataOpenVDB.cpp  DataSetList.cpp  DataSetList.hpp  DataView.cpp  DataView.hpp  DensityField.cpp  DensityField.hpp  Main.cpp  MainApp.cpp  MainApp.hpp  MainAppState.cpp  MomentUtils.cpp  MomentUtils.hpp  SceneData.hpp
src/Denoiser/: DLSSDenoiser.cpp  DLSSDenoiser.hpp  Denoiser.cpp  Denoiser.hpp  EAWDenoiser.cpp  EAWDenoiser.hpp  OpenImageDenoiseDenoiser.cpp  OpenImageDenoiseDenoiser.hpp  OptixVptDenoiser.cpp  OptixVptDenoiser.hpp  PyTorchDenoiser.cpp  PyTorchDenoiser.hpp  SVGF.cpp  SVGF.hpp
src/PathTracer/: LightEditorWidget.cpp  LightEditorWidget.hpp  OccupancyGrid.cpp  OccupancyGrid.hpp  OccupationVolumePass.cpp  OccupationVolumePass.hpp  OpenExrLoader.cpp  RenderSettings.hpp  SuperVoxelGrid.cpp  SuperVoxelGrid.hpp  VolumetricPathTracingPass.cpp  VolumetricPathTracingPass.hpp
src/PyTorch/: Config.cpp  Config.hpp  EnergyTerm.cu  EnergyTerm.cuh  Module.cpp  Module.hpp  VolumetricPathTracingModuleRenderer.cpp  VolumetricPathTracingModuleRenderer.hpp  vpt.pyi
src/Utils/: CameraPoseLinePass.cpp  CameraPoseLinePass.hpp  ImGuiCompat.h  Normalization.cpp  Normalization.hpp  NormalizeNormalsPass.cpp  NormalizeNormalsPass.hpp  RotationWidget.cpp  RotationWidget.hpp
src/Utils/nifti/: nifti1.h
src/nanovdb/util/: OpenToNanoVDB.h
test/: TestVolumetricPathTracing.cpp  VolumetricPathTracingTestData.cpp  VolumetricPathTracingTestData.hpp  VolumetricPathTracingTestRenderer.cpp  VolumetricPathTracingTestRenderer.hpp
